# open-proxy-python

./: .env.example  .gitignore  LICENSE  README.md  description.md  plan.md  pyproject.toml  ruff.toml
.kilocode/rules/: access-restriction.md  code-formatting.md  documentation-guidelines.md  feature-tracking.md  project-documentation-planning.md  server-management.md
changelogs/: 01-15-25_22-29-05_fix-connect-request-target.md  01-15-25_22-47-30_rate-limiting.md  01-15-25_23-15-00_https_support_fix.md  01-15-26_16-22-30_env_support.md
config/: users.json
features/: rate-limiting.md
plans/: 01-15-26_22-00-00_auth_implementation.md  01-15-26_22-00-00_auth_test_plan.md  rate_limiting.md
src/: __init__.py  auth.py  config.py  main.py  middleware.py  proxy.py  ratelimit.py  ratelimit_middleware.py
tests/: test_auth.py  test_proxy.py  test_ratelimit.py
