[project]
name = "open-proxy-python"
version = "0.1.0"
description = "Open Proxy Python"
authors = [
    { name = "JC1DA", email = "" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
]

# Ruff configuration is in ruff.toml